Projects section already

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
           </li>
         </ul>
         <div class="about-info">
-          <h3 class="about-title">GET TO KNOW US</h3>
-          <h2 class="about-subtitle">Why we make it happens</h2>
+          <h3 class="about-subtitle">GET TO KNOW US</h3>
+          <h2 class="about-title">Why we make it happens</h2>
           <p class="about-description">
             Your ceremony & reception venues, your vision, your dress, your colours and anything
             else you would like.
@@ -142,20 +142,20 @@
         </ul>
       </section>
       <section class="projects">
-        <div>
-          <div>
-            <ul>
-              <li></li>
-              <li></li>
-              <li></li>
+        <div class="projects-container">
+          <div class="window-top-bar">
+            <ul class="window-buttons">
+              <li class="w-btn-1"></li>
+              <li class="w-btn-2"></li>
+              <li class="w-btn-3"></li>
             </ul>
           </div>
-          <ul>
-            <li>
+          <ul class="projects-grid">
+            <li class="grid-item-1">
               <img
                 src="https://images.unsplash.com/photo-1519638831568-d9897f54ed69?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
                 alt="fotografía de enfoque selectivo de la cámara Canon DSLR"
-                width="412px"
+                width="320px"
                 height="200px"
               />
             </li>
@@ -163,7 +163,7 @@
               <img
                 src="https://images.unsplash.com/photo-1491796014055-e6835cdcd4c6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=778&q=80"
                 alt="cámara Canon AE-1 negra y gris sobre arena gris bajo un muelle marrón cerca del cuerpo de agua durante el día"
-                width="152px"
+                width="150px"
                 height="200px"
               />
             </li>
@@ -171,7 +171,7 @@
               <img
                 src="https://images.unsplash.com/photo-1580707221190-bd94d9087b7f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80"
                 alt="cámara dslr nikon negra en la mano de las personas"
-                width="152px"
+                width="150px"
                 height="200px"
               />
             </li>
@@ -179,7 +179,7 @@
               <img
                 src="https://images.unsplash.com/photo-1540113717278-2a437556ab8f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80"
                 alt="Cámara DSLR en soporte"
-                width="152px"
+                width="150px"
                 height="200px"
               />
             </li>
@@ -187,39 +187,41 @@
               <img
                 src="https://images.unsplash.com/photo-1542908945-2d06f969cc61?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2111&q=80"
                 alt="cámara DSLR negra"
-                width="152px"
+                width="150px"
                 height="200px"
               />
             </li>
-            <li>
+            <li class="grid-item-6">
               <img
                 src="https://images.unsplash.com/photo-1581591524425-c7e0978865fc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
                 alt="cámara dslr nikon negra sobre superficie azul"
-                width="324px"
+                width="320px"
                 height="200px"
               />
             </li>
           </ul>
         </div>
-        <h2>Experiments and personal projects.</h2>
-        <p>
-          Your ceremony & reception venues, your vision, your dress, your colours and anything else
-          you would like to share with us. I am a Gold Coast and Brisbane.
-        </p>
-        <ul>
-          <li>
-            <p>58+</p>
-            <p>Cute Customer</p>
-          </li>
-          <li>
-            <p>38+</p>
-            <p>Rewards</p>
-          </li>
-          <li>
-            <p>98+</p>
-            <p>Project Completed</p>
-          </li>
-        </ul>
+        <div class="projects-info">
+          <h2 class="projects-title">Experiments and personal projects.</h2>
+          <p class="projects-description">
+            Your ceremony & reception venues, your vision, your dress, your colours and anything
+            else you would like to share with us. I am a Gold Coast and Brisbane.
+          </p>
+          <ul class="projects-measurements">
+            <li class="measure-item">
+              <p class="measure-value">58+</p>
+              <p class="measure-detail">Cute Customer</p>
+            </li>
+            <li class="measure-item">
+              <p class="measure-value">38+</p>
+              <p class="measure-detail">Rewards</p>
+            </li>
+            <li class="measure-item">
+              <p class="measure-value">98+</p>
+              <p class="measure-detail">Project Completed</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="flowers">
         <h2>Floral Design in a event planning company</h2>
