Sección flores, trabajos y contacto listas

--- a/index.html
+++ b/index.html
@@ -35,15 +35,17 @@
       </button>
     </header>
     <main class="main">
-      <section class="hero">
+      <section class="hero section">
         <div class="hero-info">
           <h1 class="hero-title">Where creative process happens</h1>
           <p class="hero-text">
             Your creativity, our inspiration Whatever your story, set if free.
           </p>
           <button class="git-btn" type="button">
-            <p>Get in Touch</p>
-            <span class="fa fa-angle-right" aria-hidden="true"></span>
+            <p class="git-text">Get in Touch</p>
+            <div class="git-btn-icon">
+              <span class="fa fa-angle-right git-btn-icon" aria-hidden="true"></span>
+            </div>
           </button>
         </div>
         <ul class="hero-grid">
@@ -77,7 +79,7 @@
           </li>
         </ul>
       </section>
-      <section class="about">
+      <section class="about section">
         <ul class="about-list">
           <li class="about-item masked-img">
             <img
@@ -104,12 +106,14 @@
             else you would like.
           </p>
           <button class="git-btn" type="button">
-            <p>Get in Touch</p>
-            <span class="fa fa-angle-right" aria-hidden="true"></span>
+            <p class="git-text">Get in Touch</p>
+            <div class="git-btn-icon">
+              <span class="fa fa-angle-right git-btn-icon" aria-hidden="true"></span>
+            </div>
           </button>
         </div>
       </section>
-      <section class="cualities">
+      <section class="cualities section">
         <h2 class="cualities-title">Why Choose us</h2>
         <ul class="cualities-list">
           <li class="cualities-item">
@@ -141,7 +145,7 @@
           </li>
         </ul>
       </section>
-      <section class="projects">
+      <section class="projects section">
         <div class="projects-container">
           <div class="window-top-bar">
             <ul class="window-buttons">
@@ -223,58 +227,60 @@
           </ul>
         </div>
       </section>
-      <section class="flowers">
-        <h2>Floral Design in a event planning company</h2>
-        <p>
+      <section class="flowers section">
+        <h2 class="flowers-title">Floral Design in a event planning company</h2>
+        <p class="flowers-text">
           Your ceremony & reception venues, your vision, your dress, your colours and anything else
           you would like to share with us. I am a Gold Coast and Brisbane.
         </p>
         <button class="git-btn" type="button">
-          <p>Get in Touch</p>
-          <span class="fa fa-angle-right" aria-hidden="true"></span>
+          <p class="git-text">Get in Touch</p>
+          <div class="git-btn-icon">
+            <span class="fa fa-angle-right git-btn-icon" aria-hidden="true"></span>
+          </div>
         </button>
-        <ul>
-          <li>
+        <ul class="flowers-grid">
+          <li class="flowers-grid-item">
             <img
               src="https://images.unsplash.com/photo-1533616688419-b7a585564566?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80"
               alt="arreglo de flores rojas en la mesa blanca"
               width="300px"
               height="400px"
             />
-            <p><span>01</span>/18</p>
+            <p class="flowers-order"><span class="flowers-order-big">01</span>/18</p>
           </li>
-          <li>
+          <li class="flowers-grid-item">
             <img
               src="https://images.unsplash.com/photo-1470509037663-253afd7f0f51?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80"
               alt="foto de primer plano de girasol común"
               width="300px"
               height="400px"
             />
-            <p><span>02</span>/18</p>
+            <p class="flowers-order"><span class="flowers-order-big">02</span>/18</p>
           </li>
-          <li>
+          <li class="flowers-grid-item">
             <img
               src="https://images.unsplash.com/photo-1502977249166-824b3a8a4d6d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=880&q=80"
               alt="flor rosa y blanca"
               width="300px"
               height="400px"
             />
-            <p><span>03</span>/18</p>
+            <p class="flowers-order"><span class="flowers-order-big">03</span>/18</p>
           </li>
         </ul>
-        <div>
-          <progress max="100" value="17">17%</progress>
-          <button type="button">
+        <div class="flowers-progress">
+          <progress class="progress" max="100" value="17">17%</progress>
+          <button class="flowers-progress-btn" type="button">
             Next
             <span class="fa fa-angle-right" aria-hidden="true"></span>
           </button>
         </div>
       </section>
-      <section class="works">
-        <h2>Our Awesome Works</h2>
-        <h3>See what we shooted</h3>
-        <ul>
-          <li>
+      <section class="works section">
+        <h2 class="works-title">Our Awesome Works</h2>
+        <h3 class="works-subtitle">See what we shooted</h3>
+        <ul class="works-grid">
+          <li class="works">
             <img
               src="https://images.unsplash.com/photo-1559128010-7c1ad6e1b6a5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1473&q=80"
               alt="árboles verdes en el acantilado"
@@ -282,7 +288,7 @@
               height="400px"
             />
           </li>
-          <li>
+          <li class="works">
             <img
               src="https://images.unsplash.com/photo-1474511320723-9a56873867b5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1472&q=80"
               alt="zorro marrón en campo de nieve"
@@ -290,7 +296,7 @@
               height="400px"
             />
           </li>
-          <li>
+          <li class="works">
             <img
               src="https://images.unsplash.com/photo-1661956602153-23384936a1d3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
               alt="una computadora portátil en una mesa de café"
@@ -298,7 +304,7 @@
               height="400px"
             />
           </li>
-          <li>
+          <li class="works">
             <img
               src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=880&q=80"
               alt="verduras y carne en un tazón"
@@ -306,7 +312,7 @@
               height="400px"
             />
           </li>
-          <li>
+          <li class="works">
             <img
               src="https://images.unsplash.com/photo-1555939594-58d7cb561ad1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80"
               alt="carne y verdura a la parrilla en la mesa"
@@ -314,7 +320,7 @@
               height="400px"
             />
           </li>
-          <li>
+          <li class="works">
             <img
               src="https://images.unsplash.com/photo-1610296669228-602fa827fc1f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1075&q=80"
               alt="fondo de pantalla digital galaxy azul y negro"
@@ -322,7 +328,7 @@
               height="400px"
             />
           </li>
-          <li>
+          <li class="works">
             <img
               src="https://images.unsplash.com/photo-1615529182904-14819c35db37?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=880&q=80"
               alt="sala de estar con mesa y sillas de madera marrón"
@@ -330,7 +336,7 @@
               height="400px"
             />
           </li>
-          <li>
+          <li class="works">
             <img
               src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
               alt="fotografía de enfoque superficial de mujer al aire libre durante el día"
@@ -338,7 +344,7 @@
               height="400px"
             />
           </li>
-          <li>
+          <li class="works">
             <img
               src="https://images.unsplash.com/photo-1459156212016-c812468e2115?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=705&q=80"
               alt="surtido de suculentas en macetas de barro"
@@ -348,18 +354,21 @@
           </li>
         </ul>
       </section>
-      <section class="get-started">
-        <div>
-          <h2>Get Started With Us</h2>
-          <p>
+      <section class="get-started section">
+        <div class="gs-container">
+          <h2 class="gs-title">Get Started With Us</h2>
+          <p class="gs-text">
             Your ceremony & reception venues, yourvision, your dress, your colours and anythingelse
             you would like to share with us.
           </p>
-          <button type="button">
-            Get in Touch
-            <span class="fa fa-angle-right" aria-hidden="true"></span>
+          <button class="gs-btn" type="button">
+            <p class="gs-btn-text">Get in Touch</p>
+            <div class="gs-btn-icon">
+              <span class="fa fa-angle-right" aria-hidden="true"></span>
+            </div>
           </button>
           <img
+            class="gs-img"
             src="./images/boy-chilling.png"
             alt="Young boy sunbathing and chilling with a glass in his hand"
             width="568px"
