--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <h2 class="works-title">Our Awesome Works</h2>
         <h3 class="works-subtitle">See what we shooted</h3>
         <ul class="works-grid">
-          <li class="works">
+          <li class="works-grid-item">
             <img
               src="https://images.unsplash.com/photo-1559128010-7c1ad6e1b6a5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1473&q=80"
               alt="árboles verdes en el acantilado"
@@ -288,7 +288,7 @@
               height="400px"
             />
           </li>
-          <li class="works">
+          <li class="works-grid-item">
             <img
               src="https://images.unsplash.com/photo-1474511320723-9a56873867b5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1472&q=80"
               alt="zorro marrón en campo de nieve"
@@ -296,7 +296,7 @@
               height="400px"
             />
           </li>
-          <li class="works">
+          <li class="works-grid-item">
             <img
               src="https://images.unsplash.com/photo-1661956602153-23384936a1d3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
               alt="una computadora portátil en una mesa de café"
@@ -304,7 +304,7 @@
               height="400px"
             />
           </li>
-          <li class="works">
+          <li class="works-grid-item">
             <img
               src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=880&q=80"
               alt="verduras y carne en un tazón"
@@ -312,7 +312,7 @@
               height="400px"
             />
           </li>
-          <li class="works">
+          <li class="works-grid-item">
             <img
               src="https://images.unsplash.com/photo-1555939594-58d7cb561ad1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80"
               alt="carne y verdura a la parrilla en la mesa"
@@ -320,7 +320,7 @@
               height="400px"
             />
           </li>
-          <li class="works">
+          <li class="works-grid-item">
             <img
               src="https://images.unsplash.com/photo-1610296669228-602fa827fc1f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1075&q=80"
               alt="fondo de pantalla digital galaxy azul y negro"
@@ -328,7 +328,7 @@
               height="400px"
             />
           </li>
-          <li class="works">
+          <li class="works-grid-item">
             <img
               src="https://images.unsplash.com/photo-1615529182904-14819c35db37?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=880&q=80"
               alt="sala de estar con mesa y sillas de madera marrón"
@@ -336,7 +336,7 @@
               height="400px"
             />
           </li>
-          <li class="works">
+          <li class="works-grid-item">
             <img
               src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
               alt="fotografía de enfoque superficial de mujer al aire libre durante el día"
@@ -344,7 +344,7 @@
               height="400px"
             />
           </li>
-          <li class="works">
+          <li class="works-grid-item">
             <img
               src="https://images.unsplash.com/photo-1459156212016-c812468e2115?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=705&q=80"
               alt="surtido de suculentas en macetas de barro"
